# Autobotz-Simulator

./: .gitignore  CONTRIBUTING.md  README.md  dims  init_gazebo.sh  teste.md
01_Models/TEST_box/: model.config  model.sdf
01_Models/VSS_camera/: model.sdf
01_Models/VT_camera/: model.sdf
01_Models/VT_field_bowl/: model.sdf
01_Models/VT_field_flat/: model.sdf
01_Models/VT_vt_simplificado/: model.config
02_Worlds/: TEST_cubo_velocity.world
03_Plugins/: compile_all.py
03_Plugins/GENERIC_camera_ros/: ReadMe.md
03_Plugins/GENERIC_change_material/: README.md
03_Plugins/GENERIC_debug_link/: DebugLinkPlugin.cc  ReadMe.md
03_Plugins/GENERIC_pid_control/: CMakeLists.txt  PIDControlDataParser.hh  ReadMe.md
03_Plugins/GENERIC_set_model_pose/: ReadMe.md
03_Plugins/GENERIC_set_parameters/: CMakeLists.txt  README.md  SetParameters.hh
03_Plugins/TEST_apply_force/: compile.sh
03_Plugins/TEST_template_plugin/: compile.sh
04_Bash/: GENERIC_gazebo.sh  TEST_debug_link.sh  TEST_force.sh  TEST_joints.sh  TEST_ros.sh  TEST_velocity.sh  VSS_1on1.sh  VSS_penalty.sh  VSS_posicoes_corrigidas.sh  VSS_quiet.sh  VT_bowfield.sh  VT_flatfield.sh
04_Bash/Setup/: VSS_setup.sh  VT_setup.sh
06_Meshs/: court.dae
Bash/: GENERIC_gazebo.sh  TEST_debug_link.sh  TEST_force.sh  VSS_1on1.sh  VSS_penalty.sh  VSS_posicoes_corrigidas.sh  VSS_quiet.sh  VSS_vss.sh  VSS_vss_quiet.sh  VT_bowfield.sh  VT_flatfield.sh  run.sh  run_field.sh  run_flatfield.sh  run_force.sh  run_gazebo.sh  run_heightmap.sh  run_joints.sh  run_ros.sh  run_velocity.sh  run_vss.sh  run_vss_quiet.sh  run_vsstest.sh
Bash/Setup/: VSS_setup.sh  VT_setup.sh  vss.sh
Materials/Scripts/: VSS_Player.material  VSS_player.material  newtag.material  tag.material
Meshs/: campo.stl  chassi_visual.stl  court.dae
Models/: README.md  model.sdf
Models/Field/: model.config
Models/Field_bowl/: model.sdf
Models/Field_flat/: model.sdf
Models/VSS_Ball/: model.config  model.rsdf  model.sdf
Models/VSS_Camera/: model.sdf
Models/VSS_Player/: kicker.rb  model.config  model.rsdf  model.sdf
Models/VSS_camera/: model.sdf
Models/VSS_court/: model.sdf
Models/VSS_player/: model.rsdf  model.sdf
Models/VT/: model.sdf
Models/VT_1/: model.config  model.sdf
Models/VT_Camera/: model.sdf
Models/VT_simplificado/: model.rsdf  model.sdf
Models/VT_vt_simplificado/: model.sdf
Models/box/: model.rsdf
Models/camera_ros/: model.sdf
Modules/: README.md
Modules/Estrategia/: campo.py  main.py  robo.py
Modules/Estratégia/:  vetor.py  bola.py  campo.py  main.py  regiao.py  reta.py  robo.py
Modules/GUI/: Graphs.py  Main_Window.py  Slider.py  Vision.py  topics_vt.yaml
Modules/Keyboard_Command/: MainWindow.py  SubWindow.py  fr_topics_vss.yaml  main.py  topics_vss.yaml  topics_vt.yaml
Other/stl/: Chassi.stl
Plugin_GUI/: Main_Window.py  all_in_one.py  qt_ros.py  qt_ros_gui.py
Plugins/: ReadMe.md
Plugins/GENERIC_camera_ros/: ReadMe.md  compile.sh
Plugins/GENERIC_change_material/: CMakeLists.txt  README.md
Plugins/GENERIC_change_texture/: CMakeLists.txt  ChangeTexture.cc  ChangeTexture.hh  README.md
Plugins/GENERIC_debug_link/: CMakeLists.txt  DebugLinkDataParser.cc  DebugLinkDataParser.hh  DebugLinkPlugin.cc  DebugLinkPlugin.hh  ReadMe.md
Plugins/GENERIC_events/: EventsPlugin.cc
Plugins/GENERIC_pid_control/: PIDControlDataParser.cc  PIDControlPlugin.cc  PIDControlPlugin.hh  ReadMe.md
Plugins/GENERIC_set_model_pose/: CMakeLists.txt  SetModelPoseDataParser.hh  SetModelPosePlugin.hh
Plugins/GENERIC_set_parameters/: README.md  SetParameters.cc
Plugins/PID_Control/: CMakeLists.txt  Data.cpp  PIDControlPlugin.cpp  ReadMe.md
Plugins/Sensor_feedback/: CMakeLists.txt  SensorFeedbackPlugin.cpp
Plugins/TEST_get_joints/: compile.sh
Plugins/TEST_ros_connection/: ros_connection.cc
Plugins/VSS_players_config/: CMakeLists.txt  PlayersConfig.cc  PlayersConfig.hh
Plugins/VT_sim/: CMakeLists.txt  Data.cpp  Data.hpp  VT_sim_plugin.cpp  compile.sh  getJoints.cpp  getJoints.hh
Plugins/camera_plugin/: CMakeLists.txt  CameraPlugin.cc  CameraPlugin.hh  ReadMe.md
Plugins/debug_link/: Data.cc  (+10 more)
Plugins/events/: CMakeLists.txt  EventsPlugin.hh
Png/: Braço.xcf  Braço_2.xcf
TEMPLATE_plugin/: CMakeLists.txt  MODEL_NAME.world  MODEL_NAME_plugin.cpp  compile.sh  run.sh
VT_sim_plugin/: VT_sim.world  compile.sh  run.sh
Worlds/: TEST_cubo_force.world  TEST_cubo_ros.world  TEST_debug_link.world  VSS_1on1.world  VSS_penalty.world  VSS_vss.world  VT_bowlfield.world  VT_flatfield.world  VT_sim.world  cubo_force.world  cubo_ros.world  cubo_velocity.world  test_joints.world  vss.world  vss_test.world  vt_bowlfield.world  vt_flatfield.world  vt_heightmap.world
bash/: GENERIC_gazebo.sh  README.md  TEST_force.sh  TEST_ros.sh  TEST_velocity.sh  VSS_1on1.sh  VSS_penalty.sh  VSS_posicoes_corrigidas.sh  VSS_quiet.sh  compile
lib/: README.md
materials/: README.md
meshs/: README.md  Roda.stl  court.dae
models/: CONTRIBUTING.md  README.md
other/: README.md
plugins/: CONTRIBUTING.md  README.md
plugins/GENERIC_debug_link/: CMakeLists.txt  DebugLinkDataParser.cc  DebugLinkDataParser.hh  DebugLinkPlugin.cc  DebugLinkPlugin.hh  README.md
plugins/GENERIC_set_model_pose/: CMakeLists.txt  README.md  SetModelPoseDataParser.cc  SetModelPoseDataParser.hh  SetModelPosePlugin.cc  SetModelPosePlugin.hh
plugins/TEMPLATE_plugin/: CMakeLists.txt  README.md  TemplatePlugin.cc  TemplatePlugin.hh  plugin.cc  plugin.hh
plugins/TEST_apply_force/: CMakeLists.txt
plugins/TEST_push_model/: CMakeLists.txt
plugins/TEST_ros_connection/: CMakeLists.txt
results/: results.csv  results.txt
script/: README.md  TEST_debug_link.sh  TEST_joints.sh  VT_bowfield.sh  VT_flatfield.sh  compile  create  remove  run  urdf_to_sdf
stl/: Chassi-1.stl  Impusionador.stl  Patinha.stl  tire2.iam.stl
svg/: ext_dims
template_plugin/: compile.sh  run.sh
worlds/: CONTRIBUTING.md  README.md  TEMPLATE_world.world  TEST_test_joints.world  VSS_1on1.world  VSS_penalty.world  VSS_posicoes_corrigidas.world  VT_bowlfield.world  VT_flatfield.world  VT_sim.world
(+90 files in other folders)
